Fix: Debud error